--- a/src/com/car/view/CarOverView.fxml
+++ b/src/com/car/view/CarOverView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.effect.*?>
 <?import javafx.geometry.*?>
 <?import java.lang.*?>
@@ -13,7 +14,7 @@
         <tabs>
           <Tab text="信息">
                <content>
-                  <SplitPane dividerPositions="0.15363881401617252" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
+                  <SplitPane dividerPositions="0.15363881401617252" orientation="VERTICAL" prefHeight="382.0" prefWidth="607.0">
                     <items>
                       <AnchorPane focusTraversable="true" minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                            <children>
@@ -56,28 +57,101 @@
             </Tab>
           <Tab text="提醒">
                <content>
-                  <SplitPane dividerPositions="0.11859838274932614" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
-                    <items>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" />
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                  <BorderPane prefHeight="200.0" prefWidth="200.0">
+                     <top>
+                        <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="15.0" BorderPane.alignment="BOTTOM_RIGHT">
                            <children>
-                              <ScrollPane layoutX="7.0" layoutY="7.0" prefHeight="324.0" prefViewportHeight="200.0" prefViewportWidth="200.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                 <content>
-                                    <TableView layoutX="7.0" layoutY="7.0" prefHeight="200.0" prefWidth="200.0">
-                                      <columns>
-                                        <TableColumn prefWidth="75.0" text="C1" />
-                                        <TableColumn prefWidth="75.0" text="C2" />
-                                      </columns>
-                                    </TableView>
-                                 </content>
-                              </ScrollPane>
+                              <Label text="间隔时间：">
+                                 <HBox.margin>
+                                    <Insets bottom="18.0" />
+                                 </HBox.margin>
+                              </Label>
+                              <TextField>
+                                 <HBox.margin>
+                                    <Insets bottom="15.0" right="15.0" />
+                                 </HBox.margin>
+                              </TextField>
+                              <Button mnemonicParsing="false" style="-fx-background-color: #00BFFF;" text="模板设置">
+                                 <HBox.margin>
+                                    <Insets bottom="15.0" />
+                                 </HBox.margin>
+                              </Button>
+                              <Button mnemonicParsing="false" style="-fx-background-color: #90EE90;" text="检查">
+                                 <HBox.margin>
+                                    <Insets bottom="15.0" right="10.0" />
+                                 </HBox.margin>
+                              </Button>
                            </children>
-                        </AnchorPane>
-                    </items>
-                  </SplitPane>
+                        </HBox>
+                     </top>
+                     <center>
+                        <TableView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                          <columns>
+                            <TableColumn prefWidth="75.0" text="ID" />
+                            <TableColumn prefWidth="75.0" text="姓名" />
+                              <TableColumn prefWidth="75.0" text="身份证" />
+                              <TableColumn prefWidth="75.0" text="车牌号" />
+                              <TableColumn prefWidth="75.0" text="年检时间" />
+                              <TableColumn prefWidth="75.0" text="联系电话" />
+                              <TableColumn prefWidth="75.0" text="家庭住址" />
+                              <TableColumn prefWidth="75.0" text="发送状态" />
+                          </columns>
+                        </TableView>
+                     </center>
+                  </BorderPane>
                </content>
             </Tab>
-            <Tab text="设置" />
+            <Tab text="设置">
+               <content>
+                  <BorderPane prefHeight="200.0" prefWidth="200.0">
+                     <bottom>
+                        <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="20.0" BorderPane.alignment="CENTER">
+                           <children>
+                              <Button mnemonicParsing="false" style="-fx-border-color: #696969;" text="测试">
+                                 <HBox.margin>
+                                    <Insets bottom="20.0" />
+                                 </HBox.margin>
+                              </Button>
+                              <Button mnemonicParsing="false" style="-fx-background-color: #7FFFD4; -fx-border-color: #696969;" text="确定">
+                                 <HBox.margin>
+                                    <Insets bottom="20.0" right="10.0" />
+                                 </HBox.margin>
+                              </Button>
+                           </children>
+                        </HBox>
+                     </bottom>
+                     <center>
+                        <GridPane BorderPane.alignment="CENTER">
+                          <columnConstraints>
+                            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="307.0" minWidth="10.0" prefWidth="221.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="398.0" minWidth="10.0" prefWidth="379.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <Label text="短信设备波特率" GridPane.rowIndex="1" />
+                              <Label text="短信SIM卡PIN码" GridPane.rowIndex="2" />
+                              <Label text="短信设备厂商" GridPane.rowIndex="3" />
+                              <Label text="短信设备型号" GridPane.rowIndex="4" />
+                              <Label text="短信测试手机号码" GridPane.rowIndex="5" />
+                              <TextField maxWidth="300.0" prefHeight="23.0" prefWidth="230.0" text="COM1" GridPane.columnIndex="1" />
+                              <TextField maxWidth="300.0" text="115200" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <TextField maxWidth="300.0" text="0000" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <TextField maxWidth="300.0" text="wavecom" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <TextField maxWidth="300.0" text="M1306B" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <TextField maxWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <Label text="短信设备COM端口号" />
+                           </children>
+                        </GridPane>
+                     </center>
+                  </BorderPane>
+               </content></Tab>
         </tabs>
       </TabPane>
    </children>
