--- a/src/com/car/view/CarOverView.fxml
+++ b/src/com/car/view/CarOverView.fxml
@@ -87,7 +87,7 @@
                      <center>
                         <TableView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                           <columns>
-                            <TableColumn prefWidth="75.0" text="ID" />
+                            <TableColumn prefWidth="75.0" text="ID" visible="false" />
                             <TableColumn prefWidth="75.0" text="姓名" />
                               <TableColumn prefWidth="75.0" text="身份证" />
                               <TableColumn prefWidth="75.0" text="车牌号" />
@@ -107,12 +107,12 @@
                      <bottom>
                         <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="20.0" BorderPane.alignment="CENTER">
                            <children>
-                              <Button mnemonicParsing="false" style="-fx-border-color: #696969;" text="测试">
+                              <Button fx:id="testSMS" mnemonicParsing="false" style="-fx-border-color: #696969;" text="测试">
                                  <HBox.margin>
                                     <Insets bottom="20.0" />
                                  </HBox.margin>
                               </Button>
-                              <Button mnemonicParsing="false" style="-fx-background-color: #7FFFD4; -fx-border-color: #696969;" text="确定">
+                              <Button fx:id="SMSOK" mnemonicParsing="false" onAction="#handleOKConf" style="-fx-background-color: #7FFFD4; -fx-border-color: #696969;" text="确定">
                                  <HBox.margin>
                                     <Insets bottom="20.0" right="10.0" />
                                  </HBox.margin>
@@ -140,12 +140,12 @@
                               <Label text="短信设备厂商" GridPane.rowIndex="3" />
                               <Label text="短信设备型号" GridPane.rowIndex="4" />
                               <Label text="短信测试手机号码" GridPane.rowIndex="5" />
-                              <TextField maxWidth="300.0" prefHeight="23.0" prefWidth="230.0" text="COM1" GridPane.columnIndex="1" />
-                              <TextField maxWidth="300.0" text="115200" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <TextField maxWidth="300.0" text="0000" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <TextField maxWidth="300.0" text="wavecom" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                              <TextField maxWidth="300.0" text="M1306B" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                              <TextField maxWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <TextField fx:id="portField" maxWidth="300.0" prefHeight="23.0" prefWidth="230.0" GridPane.columnIndex="1" />
+                              <TextField fx:id="baudRateField" maxWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <TextField fx:id="pinCodeField" maxWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <TextField fx:id="manufacturerField" maxWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <TextField fx:id="modelField" maxWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <TextField fx:id="testPhoneNoField" maxWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                               <Label text="短信设备COM端口号" />
                            </children>
                         </GridPane>
