--- a/src/com/car/view/MsgDialog.fxml
+++ b/src/com/car/view/MsgDialog.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<TitledPane animated="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" text="模板设置" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<TitledPane animated="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" text="模板设置" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.car.view.MsgDialogController">
   <content>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
          <children>
@@ -15,8 +15,8 @@
                <bottom>
                   <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Button mnemonicParsing="false" style="-fx-background-color: #33FFAA;" text="确认" />
-                        <Button mnemonicParsing="false" text="取消" />
+                        <Button mnemonicParsing="false" onAction="#hanlderOK" style="-fx-background-color: #33FFAA;" text="确认" />
+                        <Button mnemonicParsing="false" onAction="#handleCancel" text="取消" />
                      </children>
                      <BorderPane.margin>
                         <Insets bottom="10.0" />
@@ -24,7 +24,7 @@
                   </HBox>
                </bottom>
                <center>
-                  <TextArea prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+                  <TextArea fx:id="MsgTempleteFiled" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
                </center>
             </BorderPane>
          </children></AnchorPane>
