--- a/src/com/car/view/CarOverView.fxml
+++ b/src/com/car/view/CarOverView.fxml
@@ -81,6 +81,11 @@
                                     <Insets bottom="15.0" right="10.0" />
                                  </HBox.margin>
                               </Button>
+                              <Button mnemonicParsing="false" style="-fx-background-color: #FF0000;" text="发送短信">
+                                 <HBox.margin>
+                                    <Insets bottom="15.0" left="-8.0" right="25.0" />
+                                 </HBox.margin>
+                              </Button>
                            </children>
                         </HBox>
                      </top>
