--- a/src/com/car/view/CarOverView.fxml
+++ b/src/com/car/view/CarOverView.fxml
@@ -18,11 +18,14 @@
                     <items>
                       <AnchorPane focusTraversable="true" minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                            <children>
-                              <HBox layoutY="29.0" prefHeight="54.0" prefWidth="600.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
+                              <HBox alignment="TOP_RIGHT" layoutY="29.0" prefHeight="54.0" prefWidth="600.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
                                  <children>
-                                    <Button mnemonicParsing="false" onAction="#handleEditPerson" style="-fx-background-color: #FFFF33; -fx-border-color: #888888;" text="修改" />
-                                    <Button mnemonicParsing="false" onAction="#handleDeleteCar" style="-fx-background-color: #FF7744; -fx-border-color: #888888;" text="删除" />
                                     <Button mnemonicParsing="false" onAction="#handleNewCarInfo" style="-fx-background-color: #33FFAA; -fx-border-color: #888888;" text="添加" />
+                                    <Button mnemonicParsing="false" onAction="#handleEditPerson" style="-fx-background-color: #FFFF33; -fx-border-color: #888888;" text="修改" />
+                                    <Button mnemonicParsing="false" onAction="#handleDeleteCar" style="-fx-background-color: #FF7744; -fx-border-color: #888888;" text="删除">
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin></Button>
                                  </children>
                                  <padding>
                                     <Insets top="4.0" />
@@ -81,7 +84,7 @@
                                     <Insets bottom="15.0" right="10.0" />
                                  </HBox.margin>
                               </Button>
-                              <Button mnemonicParsing="false" style="-fx-background-color: #FF0000;" text="发送短信">
+                              <Button mnemonicParsing="false" onAction="#handlerSendSms" style="-fx-background-color: #FFAA33;" text="发送短信">
                                  <HBox.margin>
                                     <Insets bottom="15.0" left="-8.0" right="25.0" />
                                  </HBox.margin>
